# pushstr

./: .gitignore  2025-12-10_23-54-27.mkv  2025-12-10_23-55-46.mkv  2025-12-10_23-58-08.mkv  CHANGELOG.md  MOBILE_APP_GUIDE.md  MOBILE_APP_SUMMARY.md  README.md  bg.diff  flutter_rust_bridge.yaml  manifest.chrome.json  manifest.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  zapstore.yaml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: profile_history_disappears_on_switch.md  pushstr-nip17-sync.md
demo_vids/: 2025-12-11_00-00-31.mkv  2025-12-11_00-02-21.mkv
documentation/: changelog.md  pushstr_fsd.md
fluttr/: README.md  pubspec.yaml
fluttr/integration_test/: simple_test.dart
fluttr/lib/: main.dart
fluttr/linux/: CMakeLists.txt
fluttr/rust/: Cargo.toml
fluttr/rust/src/: frb_generated.rs
fluttr/rust/src/api/: mod.rs  nostr.rs
fluttr/rust_builder/: pubspec.yaml
fluttr/web/: index.html  (+1 more)
mobile/: FIXES_NEEDED.md  INTEGRATION_STATUS.md  QUICKSTART.md  README.md  RUST_FFI_INTEGRATION.md  SOLUTION_SUMMARY.md  analysis_options.yaml  pubspec.yaml
pushstr_mobile/: README.md
pushstr_rust/: Cargo.toml  build.rs
pushstr_rust/src/: api.rs  frb_generated.rs
pushstr_rust/src/src/: frb_generated.rs
release-test/: dfe7a10443fc447dacc8-0.0.5.xpi  dfe7a10443fc447dacc8-0.0.6.xpi  dfe7a10443fc447dacc8-0.0.7.xpi
scripts/: build.js  js_dm_test.js  package.js  patch_wasm_crypto.js
src/: background.html  background.js  options.css  options.html  options.js  popup.css  popup.html  popup.js  types.ts  wasm_crypto.js
test/: test.md
wasm_crypto/: Cargo.toml
wasm_crypto/src/: lib.rs
(+67 files in other folders)
