[package]
name = "pushstr_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
nostr-sdk = { version = "0.43", features = ["nip44", "nip04", "nip59"] }
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
flate2 = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "json"] }
aes-gcm = "0.10"
rand = "0.8"
secp256k1 = { version = "0.29", features = ["hashes", "rand"] }
hkdf = "0.12"
chacha20poly1305 = "0.10"
getrandom = "0.2"
hmac = "0.12"
chacha20 = "0.9"

# Build-dependencies removed - use CLI tool instead
# [build-dependencies]
# flutter_rust_bridge_codegen = "2.5"
