[package]
name = "rust_lib_fluttr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
chrono = "0.4.41"
flutter_rust_bridge = "=2.9.0"
nostr-sdk = { version = "0.41.0", features = ["nip04"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
